# Post-Quantum-Near-Falcon512

./: Falcon.md  README.md
falcon512-c-near/: README.md
falcon512-c-near/avx2/: Makefile  config.h
falcon512-c-near/clean/: falcon.h
falcon512-c-near/code/: Makefile
falcon512-c-near/code/test/: test_falcon.c
near-falcon512/: Cargo.toml  README.md  build.rs
near-falcon512/falcon-c-near/: README.md
near-falcon512/falcon-c-near/code/: falcon.c
near-falcon512/src/: falcon512.rs  ffi.rs  lib.rs  main.rs
near-falcon512/tmp/: lib.rs
pqcrypto-falcon-near/: Cargo.toml
pqcrypto-falcon-near/src/: ffi.rs
pqcrypto-falcon512-near/: falcon512-c-near
