[package]
name = "near-falcon512"
description = "Falcon-512 Post-Quantum Signature Scheme for Near Blockchain"
readme = "README.md"
version = "0.0.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Post-Quantum-Team/"
repository = "https://github.com/Post-Quantum-Team/Post-Quantum-pqcrypto-falcon-near"
keywords = ["cryptography", "post-quantum", "security", "near", "Blockchain","falcon512"]
categories = ["cryptography", "no-std"]

[dependencies]
pqcrypto-internals = { version = "0.2" }
pqcrypto-traits = { version = "0.3.4", default-features = false }
libc = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.3.2", features = ["const-generics"], optional = true }

[features]
default = ["avx2", "std"]
avx2 = ["std"]
std = ["pqcrypto-traits/std"]
serialization = ["serde", "serde-big-array"]

[dev-dependencies]
rand = "0.7.0"
hex = "0.4.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"



